--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!-- app.component.html -->
-<h1>{{ title }} app is running!</h1>
+<!-- <h1>{{ title }} app is running!</h1> -->
 <router-outlet></router-outlet>
-<button nz-button nzType="primary" (click)="logout()">Logout</button>
+<!-- <button nz-button nzType="primary" (click)="logout()">Logout</button> -->
