--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,4 +1,4 @@
-<form nz-form [formGroup]="loginForm" (ngSubmit)="login()">
+<!-- <form nz-form [formGroup]="loginForm" (ngSubmit)="login()">
     <nz-form-item>
         <nz-form-control>
             <nz-form-label [nzSpan]="24" nzRequired>Username</nz-form-label>
@@ -12,4 +12,29 @@
         </nz-form-control>
     </nz-form-item>
     <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
-</form>
+</form> -->
+
+<!-- <div *ngIf="user$ | async as user; else showLogin">
+    <h1>Hello {{ user?.displayName }}!</h1>
+    <button (click)="logout()">Logout</button>
+</div>
+<ng-template #showLogin>
+    <button (click)="login()">Login with Google</button>
+</ng-template> -->
+
+<!-- src/app/login/login.component.html -->
+<div class="login-container">
+    <h2>Login</h2>
+    <form (ngSubmit)="login()">
+        <div class="form-group">
+            <label for="email">Email:</label>
+            <input type="email" id="email" [(ngModel)]="email" name="email" required />
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" [(ngModel)]="password" name="password" required />
+        </div>
+        <button type="submit">Login</button>
+    </form>
+    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+</div>
