--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,13 @@
-<!-- app.component.html -->
-<!-- <h1>{{ title }} app is running!</h1> -->
-<router-outlet></router-outlet>
-<!-- <button nz-button nzType="primary" (click)="logout()">Logout</button> -->
+<div *ngIf="isLoggined; else loginForm">
+    <header>Header</header>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+    <footer>Footer</footer>
+</div>
+
+<ng-template #loginForm>
+    <main>
+        <router-outlet></router-outlet>
+    </main>
+</ng-template>
