--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,40 +1,19 @@
-<!-- <form nz-form [formGroup]="loginForm" (ngSubmit)="login()">
-    <nz-form-item>
-        <nz-form-control>
-            <nz-form-label [nzSpan]="24" nzRequired>Username</nz-form-label>
-            <input nz-input formControlName="username" placeholder="Nhập" />
-        </nz-form-control>
-    </nz-form-item>
-    <nz-form-item>
-        <nz-form-control>
-            <nz-form-label [nzSpan]="24" nzRequired>Password</nz-form-label>
-            <input nz-input type="password" formControlName="password" placeholder="Nhập" />
-        </nz-form-control>
-    </nz-form-item>
-    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
-</form> -->
+<mat-card>
+    <mat-toolbar color="primary" class="form-login-title">
+        <span class="fill-remaining-space title-modal">Đăng nhập</span>
+    </mat-toolbar>
 
-<!-- <div *ngIf="user$ | async as user; else showLogin">
-    <h1>Hello {{ user?.displayName }}!</h1>
-    <button (click)="logout()">Logout</button>
-</div>
-<ng-template #showLogin>
-    <button (click)="login()">Login with Google</button>
-</ng-template> -->
+    <form [formGroup]="formLogin" (ngSubmit)="onSubmit()">
+        <mat-form-field appearance="fill">
+            <mat-label>Email</mat-label>
+            <input matInput formControlName="email" required placeholder="nguyenvana@gmail.com">
+        </mat-form-field>
 
-<!-- src/app/login/login.component.html -->
-<div class="login-container">
-    <h2>Login</h2>
-    <form (ngSubmit)="login()">
-        <div class="form-group">
-            <label for="email">Email:</label>
-            <input type="email" id="email" [(ngModel)]="email" name="email" required />
-        </div>
-        <div class="form-group">
-            <label for="password">Password:</label>
-            <input type="password" id="password" [(ngModel)]="password" name="password" required />
-        </div>
-        <button type="submit">Login</button>
+        <mat-form-field appearance="fill">
+            <mat-label>Mật khẩu</mat-label>
+            <input matInput formControlName="password" required [placeholder]="placeholderText">
+        </mat-form-field>
+
+        <button mat-raised-button color="primary" type="submit" [disabled]="!formLogin.valid">Đăng nhập</button>
     </form>
-    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-</div>
+</mat-card>
