--- a/src/assets/fonts/font.scss
+++ b/src/assets/fonts/font.scss
@@ -29,6 +29,61 @@
 }
 
 @font-face {
+    font-family: 'Poppins-ExtraLight';
+    src: url('./Poppins/Poppins-ExtraLight.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-ExtraLightItalic';
+    src: url('./Poppins/Poppins-ExtraLightItalic.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-Italic';
+    src: url('./Poppins/Poppins-Italic.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-Light';
+    src: url('./Poppins/Poppins-Light.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-LightItalic';
+    src: url('./Poppins/Poppins-LightItalic.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-Medium';
+    src: url('./Poppins/Poppins-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-MediumItalic';
+    src: url('./Poppins/Poppins-MediumItalic.ttf');
+}
+
+@font-face {
     font-family: 'Poppins-Regular';
     src: url('./Poppins/Poppins-Regular.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-SemiBold';
+    src: url('./Poppins/Poppins-SemiBold.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-SemiBoldItalic';
+    src: url('./Poppins/Poppins-SemiBoldItalic.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-Thin';
+    src: url('./Poppins/Poppins-Thin.ttf');
+}
+
+@font-face {
+    font-family: 'Poppins-ThinItalic';
+    src: url('./Poppins/Poppins-ThinItalic.ttf');
 }
