--- a/src/app/pages/login/login.component.scss
+++ b/src/app/pages/login/login.component.scss
@@ -1,44 +1,3 @@
-// .login-container {
-//     width: 100%;
-//     height: 100vh;
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     margin-top: -4rem;
-
-//     .login-content {
-
-//         mat-card {
-//             max-width: 400px;
-//             margin: 2em auto;
-//             padding: 2em;
-//             position: relative;
-
-//             form {
-//                 margin-top: 5em;
-//             }
-//         }
-
-//         mat-form-field {
-//             width: 100%;
-//             margin-bottom: 1em;
-//         }
-
-//         .login-title {
-//             position: absolute;
-//             top: 0;
-//             left: 0;
-//             right: 0;
-//         }
-
-//         .login-action {
-//             display: flex;
-//             justify-content: center;
-//         }
-
-//     }
-// }
-
 .parent {
     background-color: var(--primary-3);
     background: linear-gradient(to right, var(--background-white-2), var(--primary-3));
@@ -78,25 +37,6 @@
     margin: 15px 0 10px;
 }
 
-.container button {
-    background-color: var(--primary-1);
-    color: var(--text-light-1);
-    font-size: var(--small-font-size);
-    padding: 10px 40px;
-    border: 1px solid transparent;
-    border-radius: 8px;
-    font-weight: var(--bold-font-weight);
-    letter-spacing: 0.5px;
-    text-transform: uppercase;
-    margin-top: 10px;
-    cursor: pointer;
-}
-
-.container button.hidden {
-    background-color: transparent;
-    border-color: #fff;
-}
-
 .container form {
     background-color: #fff;
     display: flex;
@@ -107,7 +47,7 @@
     height: 100%;
 }
 
-.container input {
+.container form>input {
     background-color: var(--background-input-1);
     border: none;
     margin: 8px 0;
@@ -167,23 +107,27 @@
 
 .social-icons {
     margin: 20px 0;
-}
 
-.social-icons a {
-    border: 1px solid #ccc;
-    border-radius: 20%;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0 3px;
-    width: 40px;
-    height: 40px;
-    transition: all 0.5s;
-}
+    a {
+        border: 1px solid #ccc;
+        border-radius: 20%;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        margin: 0 3px;
+        width: 40px;
+        height: 40px;
+        transition: all 0.5s;
 
-.social-icons a:hover {
-    scale: 1.3;
-    border: 1px solid #000;
+        &:hover {
+            scale: 1.3;
+            border: 1px solid #000;
+        }
+
+        i {
+            font-size: 2rem;
+        }
+    }
 }
 
 .toggle-container {
